# Algorithms-and-data-structures

./: README.md
lesson-01/: tasks.md
lesson-01/1_Algorithm_Complexity_Assessment/: answer.md
lesson-01/2_Search_in_Array/: CMakeLists.txt  main.cpp
lesson-02/: tasks.md
lesson-02/1_Fibonacci_Numbers/: CMakeLists.txt  main.cpp
lesson-02/2_Accelerating_Fibonacci/: CMakeLists.txt  main.cpp
lesson-03/: tasks.md
lesson-03/1_Merge_Sort/: CMakeLists.txt  main.cpp
lesson-03/2_Quick_Sort/: CMakeLists.txt  main.cpp
lesson-03/3_Count_Sort/: CMakeLists.txt  main.cpp
lesson-04/: tasks.md
lesson-04/1_Output_Mutable_Dynamic_Array/: CMakeLists.txt  main.cpp
lesson-04/2_Adding_To_Mutable_Dynamic_Array/: CMakeLists.txt  main.cpp
lesson-04/3_Remove_First_El_From_Mutable_Dynamic_Array/: CMakeLists.txt  main.cpp
lesson-05/: tasks.md
lesson-05/1_Output_Pyramid_On_Array/: CMakeLists.txt  main.cpp  pyramid.cpp  pyramid.h
lesson-05/2_Journey_Through_the_Pyramid/: CMakeLists.txt  main.cpp  pyramid.cpp  pyramid.h
lesson-06/: tasks.md
lesson-06/1_Naive_Hash_Function_For_String/: CMakeLists.txt  main.cpp
lesson-06/2_Real_Hash_Function_For_String/: CMakeLists.txt  fromuser.cpp  fromuser.h  main.cpp
lesson-06/3_Simplified_Rabin-Karp_Algorithm/: CMakeLists.txt  main.cpp  rabinkarp.cpp  rabinkarp.h
lesson-07/: tasks.md
lesson-07/1_Traversal_In_Depth/: CMakeLists.txt  main.cpp
lesson-07/2_Wide_Crawl/: CMakeLists.txt  main.cpp
lesson-07/3_Finding_Cycles/: CMakeLists.txt  graph.cpp  graph.h  main.cpp
lesson-07/4_Finding_Connectivity_Components/: CMakeLists.txt  main.cpp
lesson-08/: tasks.md
lesson-08/1_Output_Digraph_To_Console/: CMakeLists.txt  main.cpp
lesson-08/2_Topological_Sorting_Of_Digraph/: CMakeLists.txt  main.cpp
